--- a/doc/Project_Report.tex
+++ b/doc/Project_Report.tex
@@ -260,7 +260,7 @@ and compare the performances. From their study, it was concluded that VGG19 and
 DenseNEt201 models are better/recommended whereas InceptionV3 did not perform
 well when compared to other deep learning models.
 
-\subsection{COVID-ResNet}
+\subsubsection{COVID-ResNet}
 
 M Farooq and A Hafeez suggested this architecture, COVID-ResNet
 \cite{farooq2020covidresnet}, they have used ResNet50 pre-trained model, applied
