--- a/doc/Project_Report.tex
+++ b/doc/Project_Report.tex
@@ -354,7 +354,7 @@ model from overfitting.
 
 We then applied the trained FC-DenseNet103 segmentation model on the AP and PA
 CXR images from the COVID Chest X-ray and Kaggle X-ray datasets. These datasets now
-contains 478 COVID-19 and 5932 non-COVID CXR images. The original
+contain 478 COVID-19 and 5932 non-COVID CXR images. The original
 inference script provided by Park et al. would produce two outputs, a Numpy\footnote{
     \url{https://numpy.org/devdocs/reference/generated/numpy.lib.format.html}} format
 from the CXR and a Numpy format of the mask separating the lung
